--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "sass": "^1.32.5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.3"
   }
 }
