--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
     "next": "10.0.5",
