--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && jest"
+    }
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
@@ -32,9 +37,11 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "babel-jest": "^26.6.3",
+    "husky": "^4.3.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "typescript": "^4.1.3"
   }
 }
