feature: add types check on commit

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && jest"
+      "pre-commit": "pretty-quick --staged && tsc && jest"
     }
   },
   "dependencies": {
