--- a/package.json
+++ b/package.json
@@ -9,18 +9,14 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && tsc && jest"
-    }
-  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
-    "next": "10.0.5",
+    "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-query": "^3.12.2",
     "react-redux": "^7.2.2",
     "sass": "^1.32.5"
   },
@@ -30,14 +26,14 @@
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
+    "@testing-library/user-event": "^13.0.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "babel-jest": "^26.6.3",
-    "husky": "^4.3.8",
+    "husky": "^5.1.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
