added simple deploy script

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,7 +15,21 @@ server {
   proxy_set_header Host $host;
   proxy_cache_bypass $http_upgrade;
 
+  location /api/ {
+    proxy_redirect off;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Scheme $scheme;
+    
+    proxy_pass http://178.154.232.196:21800;
+  }
+
   location / {
+    gzip on;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css application/json application/x-javascript application/javascript text/javascript;
+
     proxy_pass http://nextjs_upstream;
   }
+
 }
