--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   frontend:
-    build:
-      context: .
-      dockerfile: dockerfile
+    build: .
     command: node_modules/.bin/next start
   nginx:
     depends_on:
