--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "@svgr/webpack": "^5.5.0",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
     "next": "10.0.9",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-query": "^3.12.2",
     "react-redux": "^7.2.2",
     "sass": "^1.32.5"
