--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "@svgr/webpack": "^5.5.0",
+    "@types/classnames": "^2.2.11",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "moment": "^2.29.1",
     "next": "10.0.9",
     "react": "^17.0.2",
