--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev & tsc --watch",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "test": "jest",
@@ -21,7 +21,8 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
-    "sass": "^1.32.5"
+    "sass": "^1.32.5",
+    "swiper": "^6.5.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.13",
