--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
+    "react-transition-group": "^4.4.1",
     "sass": "^1.32.5",
     "swiper": "^6.5.0"
   },
@@ -36,6 +37,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "@types/react-transition-group": "^4.4.1",
     "babel-jest": "^26.6.3",
     "husky": "^5.1.3",
     "identity-obj-proxy": "^3.0.0",
