--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "moment": "^2.29.1",
-    "next": "10.0.9",
+    "next": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
     "react-transition-group": "^4.4.1",
-    "sass": "^1.32.5",
+    "sass": "^1.32.8",
     "swiper": "^6.5.0"
   },
   "devDependencies": {
