--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "@reduxjs/toolkit": "^1.5.0",
     "@svgr/webpack": "^5.5.0",
     "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-transition-group": "^4.4.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "moment": "^2.29.1",
@@ -26,7 +32,8 @@
     "react-redux": "^7.2.2",
     "react-transition-group": "^4.4.1",
     "sass": "^1.32.8",
-    "swiper": "^6.5.0"
+    "swiper": "^6.5.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.13",
@@ -35,12 +42,6 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^13.0.1",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-transition-group": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "babel-jest": "^26.6.3",
@@ -62,7 +63,6 @@
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^21.0.0",
-    "stylelint-order": "^4.1.0",
-    "typescript": "^4.1.3"
+    "stylelint-order": "^4.1.0"
   }
 }
