--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-transition-group": "^4.4.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "formik": "^2.2.6",
     "moment": "^2.29.1",
     "next": "^10.1.3",
     "react": "^17.0.2",
