--- a/.stylelintrc
+++ b/.stylelintrc
@@ -5,6 +5,7 @@
     "stylelint-config-rational-order"
   ],
   "rules": {
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "value-keyword-case": null
   }
 }
