--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
     "react-transition-group": "^4.4.1",
+    "react-yandex-maps": "^4.6.0",
     "sass": "^1.32.8",
     "swiper": "^6.5.0",
     "typescript": "^4.1.3"
