--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-transition-group": "^4.4.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "file-loader": "^6.2.0",
     "formik": "^2.2.6",
     "moment": "^2.29.1",
     "next": "^10.1.3",
