--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.29.1",
     "next": "^10.1.3",
     "react": "^17.0.2",
+    "react-code-input": "^3.10.1",
     "react-dom": "^17.0.2",
     "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
