--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@svgr/webpack": "^5.5.0",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.37",
+    "@types/node": "^15.12.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
@@ -27,7 +27,7 @@
     "file-loader": "^6.2.0",
     "formik": "^2.2.6",
     "moment": "^2.29.1",
-    "next": "^10.1.3",
+    "next": "^11.0.1",
     "react": "^17.0.2",
     "react-code-input": "^3.10.1",
     "react-dom": "^17.0.2",
@@ -37,34 +37,35 @@
     "react-yandex-maps": "^4.6.0",
     "sass": "^1.32.8",
     "swiper": "^6.5.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.3.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
-    "@testing-library/dom": "^7.29.4",
+    "@testing-library/dom": "^8.0.0",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
+    "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.0.1",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.0.5",
     "cross-env": "^7.0.3",
     "eslint": "^7.23.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^5.1.3",
+    "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.5",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "stylelint": "^13.12.0",
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^21.0.0",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0"
   }
 }
