feature: add desktop header expansion

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
   ],
   "root": true,
   "rules": {
+    "@typescript-eslint/quotes": ["error", "backtick"],
     "react/jsx-sort-props": [
       "error",
       {
