fix: fix deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     command: node_modules/.bin/next start
     env_file:
       - .env
+    volumes:
+      - ./:/app
   nginx:
     depends_on:
       - frontend
